index 파일에 상품소개 파일을 연결하였습니다

--- a/g_intro.html
+++ b/g_intro.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>g_intro</title>
 </head>
 <body>
-    <h1>index</h1>
-    <a href="./g_intro.html">상품소개</a>
+    <h1>상품소개</h1>
 </body>
 </html>
